--- a/app/templates/index2.html
+++ b/app/templates/index2.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Socket.io Example</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-    <link href="{{ url_for('static', filename='css/chat.css')}}" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/chat.css')}}" rel=" stylesheet" />
 </head>
 
 <body>
@@ -29,6 +29,6 @@
 
 
 </body>
-<script src="{{ url_for('static', filename='js/chat2.js')}}"></script>
+<script src="{{ url_for('static', filename='js/chat.js')}}"></script>
 
 </html>
