--- a/app/templates/index2.html
+++ b/app/templates/index2.html
@@ -29,6 +29,8 @@
 
 
 </body>
+
+<script src="{{ url_for('static', filename='js/script.js')}}"></script>
 <script src="{{ url_for('static', filename='js/chat.js')}}"></script>
 
 </html>
