--- a/app/templates/messages.html
+++ b/app/templates/messages.html
@@ -1,52 +1,52 @@
-
 <!DOCTYPE html>
 <html>
 
 <!-- Mirrored from gambolthemes.net/workwise_demo/HTML/messages.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Apr 2019 14:19:42 GMT -->
+
 <head>
-<meta charset="UTF-8">
-<title>Chat MMT</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="" />
-<meta name="keywords" content="" />
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/animate.css')}}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/line-awesome.css')}}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/line-awesome-font-awesome.min.css')}}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font-awesome.min.css"')}}'>
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/jquery.mCustom mScrollbar.min.css')}}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css')}}">
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/responsive.css')}}">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<meta charset="UTF-8">
+	<title>Chat MMT</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="" />
+	<meta name="keywords" content="" />
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/animate.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/line-awesome.css')}}">
+	<link rel="stylesheet" type="text/css"
+		href="{{ url_for('static', filename='css/line-awesome-font-awesome.min.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/font-awesome.min.css"')}}'>
+<link rel=" stylesheet" type="text/css"
+		href="{{ url_for('static', filename='css/jquery.mCustom mScrollbar.min.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css')}}">
+	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/responsive.css')}}">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 
 
 <body>
 	<header>
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-	  
-		  <form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		  </form>
-	  </nav>
-</header>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+			<form class="form-inline my-2 my-lg-0">
+				<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+			</form>
+		</nav>
+	</header>
 	<div class="wrapper">
-		
+
 		<section class="messages-page">
 			<div class="container">
 				<div class="messages-sec">
-					<div class="row">
-						<div class="col-lg-4 col-md-12 no-pdd">
+					<div class="row" id="inchat">
+						<div class="col-lg-4 col-md-12 no-pdd left">
 							<div class="msgs-list">
 								<div class="msg-title">
+									<button onclick="backtoFront()">Back</button>
 									<h3>Messages</h3>
-									<ul>
-										<li><a href="#" title=""><i class="fa fa-cog"></i></a></li>
-										<li><a href="#" title=""><i class="fa fa-ellipsis-v"></i></a></li>
-									</ul>
-								</div><!--msg-title end-->
+								</div>
+								<!--msg-title end-->
 								<div class="messages-list">
 									<ul>
 										<li class="active">
@@ -57,11 +57,9 @@
 												</div>
 												<div class="usr-mg-info">
 													<h3>John</h3>
-													<p>Lorem ipsum dolor <img src="images/smley.png" alt=""></p>
-												</div><!--usr-mg-info end-->
-												<span class="posted_time">1:55 PM</span>
-												<span class="msg-notifc">1</span>
-											</div><!--usr-msg-details end-->
+												</div>
+											</div>
+											<!--usr-msg-details end-->
 										</li>
 										<li>
 											<div class="usr-msg-details">
@@ -70,191 +68,183 @@
 												</div>
 												<div class="usr-mg-info">
 													<h3>David Vane</h3>
-													<p>Vestibulum ac diam..</p>
-												</div><!--usr-mg-info end-->
-												<span class="posted_time">1:55 PM</span>
-											</div><!--usr-msg-details end-->
-										</li>
-										<li>
-											<div class="usr-msg-details">
-												<div class="usr-ms-img">
-													<img src="images/resources/m-img3.png" alt="">
 												</div>
-												<div class="usr-mg-info">
-													<h3>Nancy Dilan</h3>
-													<p>Quam vehicula.</p>
-												</div><!--usr-mg-info end-->
-												<span class="posted_time">1:55 PM</span>
-											</div><!--usr-msg-details end-->
-										</li>
-										<li>
-											<div class="usr-msg-details">
-												<div class="usr-ms-img">
-													<img src="images/resources/m-img4.png" alt="">
-													<span class="msg-status"></span>
-												</div>
-												<div class="usr-mg-info">
-													<h3>Norman Kenney</h3>
-													<p>Nulla quis lorem ut..</p>
-												</div><!--usr-mg-info end-->
-												<span class="posted_time">1:55 PM</span>
-											</div><!--usr-msg-details end-->
-										</li>
-										<li>
-											<div class="usr-msg-details">
-												<div class="usr-ms-img">
-													<img src="images/resources/m-img5.png" alt="">
-													<span class="msg-status"></span>
-												</div>
-												<div class="usr-mg-info">
-													<h3>James Dilan</h3>
-													<p>Vivamus magna just..</p>
-												</div><!--usr-mg-info end-->
-												<span class="posted_time">1:55 PM</span>
-											</div><!--usr-msg-details end-->
-										</li>
-										<li>
-											<div class="usr-msg-details">
-												<div class="usr-ms-img">
-													<img src="images/resources/m-img6.png" alt="">
-												</div>
-												<div class="usr-mg-info">
-													<h3>Mike Dorn</h3>
-													<p>Praesent sapien massa.</p>
-												</div><!--usr-mg-info end-->
-												<span class="posted_time">1:55 PM</span>
-											</div><!--usr-msg-details end-->
-										</li>
-										<li>
-											<div class="usr-msg-details">
-												<div class="usr-ms-img">
-													<img src="images/resources/m-img7.png" alt="">
-												</div>
-												<div class="usr-mg-info">
-													<h3>Patrick Morison</h3>
-													<p>Convallis a pellente...</p>
-												</div><!--usr-mg-info end-->
-												<span class="posted_time">1:55 PM</span>
-											</div><!--usr-msg-details end-->
+												<!--usr-mg-info end-->
+											</div>
+											<!--usr-msg-details end-->
 										</li>
 									</ul>
-								</div><!--messages-list end-->
-							</div><!--msgs-list end-->
+								</div>
+								<!--messages-list end-->
+							</div>
+							<!--msgs-list end-->
 						</div>
-						<div class="col-lg-8 col-md-12 pd-right-none pd-left-none">
+						<div class="col-lg-8 col-md-12 pd-right-none pd-left-none right">
 							<div class="main-conversation-box">
-								<div class="message-bar-head">
-									<div class="usr-msg-details">
-										<div class="usr-ms-img">
-											<img src="images/resources/m-img1.png" alt="">
-										</div>
-										<div class="usr-mg-info">
-											<h3>{{session['name']}}</h3>
-											<p>{{session['ip']}}</p>
-										</div><!--usr-mg-info end-->
-									</div>
-									<a href="#" title=""><i class="fa fa-ellipsis-v"></i></a>
-								</div><!--message-bar-head end-->
 								<div class="messages-line">
 									<div class="main-message-box">
 										<div class="messg-usr-img">
 											<img src="images/resources/m-img1.png" alt="">
-										</div><!--messg-usr-img end-->
+										</div>
+										<!--messg-usr-img end-->
 										<div class="message-dt">
 											<div class="message-inner-dt img-bx">
 												<img src="images/resources/mt-img1.png" alt="">
 												<img src="images/resources/mt-img2.png" alt="">
 												<img src="images/resources/mt-img3.png" alt="">
-											</div><!--message-inner-dt end-->
+											</div>
+											<!--message-inner-dt end-->
 											<span>Sat, Aug 23, 1:08 PM</span>
-										</div><!--message-dt end-->
-									</div><!--main-message-box end-->
+										</div>
+										<!--message-dt end-->
+									</div>
+									<!--main-message-box end-->
 									<div class="main-message-box ta-right">
 										<div class="message-dt">
 											<div class="message-inner-dt">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor.</p>
-											</div><!--message-inner-dt end-->
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum
+													congue leo eget malesuada. Vivamus suscipit tortor eget felis
+													porttitor.</p>
+											</div>
+											<!--message-inner-dt end-->
 											<span>Sat, Aug 23, 1:08 PM</span>
-										</div><!--message-dt end-->
+										</div>
+										<!--message-dt end-->
 										<div class="messg-usr-img">
 											<img src="images/resources/m-img2.png" alt="">
-										</div><!--messg-usr-img end-->
-									</div><!--main-message-box end-->
+										</div>
+										<!--messg-usr-img end-->
+									</div>
+									<!--main-message-box end-->
 									<div class="main-message-box st3">
 										<div class="message-dt st3">
 											<div class="message-inner-dt">
 												<p>Cras ultricies ligula.<img src="images/smley.png" alt=""></p>
-											</div><!--message-inner-dt end-->
+											</div>
+											<!--message-inner-dt end-->
 											<span>5 minutes ago</span>
-										</div><!--message-dt end-->
+										</div>
+										<!--message-dt end-->
 										<div class="messg-usr-img">
 											<img src="images/resources/m-img1.png" alt="">
-										</div><!--messg-usr-img end-->
-									</div><!--main-message-box end-->
+										</div>
+										<!--messg-usr-img end-->
+									</div>
+									<!--main-message-box end-->
 									<div class="main-message-box ta-right">
 										<div class="message-dt">
 											<div class="message-inner-dt">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor.</p>
-											</div><!--message-inner-dt end-->
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum
+													congue leo eget malesuada. Vivamus suscipit tortor eget felis
+													porttitor.</p>
+											</div>
+											<!--message-inner-dt end-->
 											<span>Sat, Aug 23, 1:08 PM</span>
-										</div><!--message-dt end-->
+										</div>
+										<!--message-dt end-->
 										<div class="messg-usr-img">
 											<img src="images/resources/m-img2.png" alt="">
-										</div><!--messg-usr-img end-->
-									</div><!--main-message-box end-->
+										</div>
+										<!--messg-usr-img end-->
+									</div>
+									<!--main-message-box end-->
 									<div class="main-message-box st3">
 										<div class="message-dt st3">
 											<div class="message-inner-dt">
 												<p>....</p>
-											</div><!--message-inner-dt end-->
+											</div>
+											<!--message-inner-dt end-->
 											<span>Typing...</span>
-										</div><!--message-dt end-->
+										</div>
+										<!--message-dt end-->
 										<div class="messg-usr-img">
 											<img src="images/resources/m-img1.png" alt="">
-										</div><!--messg-usr-img end-->
-									</div><!--main-message-box end-->
+										</div>
+										<!--messg-usr-img end-->
+									</div>
+									<!--main-message-box end-->
 									<div class="main-message-box ta-right">
 										<div class="message-dt">
 											<div class="message-inner-dt">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum congue leo eget malesuada. Vivamus suscipit tortor eget felis porttitor.</p>
-											</div><!--message-inner-dt end-->
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum
+													congue leo eget malesuada. Vivamus suscipit tortor eget felis
+													porttitor.</p>
+											</div>
+											<!--message-inner-dt end-->
 											<span>Sat, Aug 23, 1:08 PM</span>
-										</div><!--message-dt end-->
+										</div>
+										<!--message-dt end-->
 										<div class="messg-usr-img">
 											<img src="images/resources/m-img2.png" alt="">
-										</div><!--messg-usr-img end-->
-									</div><!--main-message-box end-->
+										</div>
+										<!--messg-usr-img end-->
+									</div>
+									<!--main-message-box end-->
 									<div class="main-message-box st3">
 										<div class="message-dt st3">
 											<div class="message-inner-dt">
 												<p>....</p>
-											</div><!--message-inner-dt end-->
+											</div>
+											<!--message-inner-dt end-->
 											<span>Typing...</span>
-										</div><!--message-dt end-->
+										</div>
+										<!--message-dt end-->
 										<div class="messg-usr-img">
 											<img src="images/resources/m-img1.png" alt="">
-										</div><!--messg-usr-img end-->
-									</div><!--main-message-box end-->
-								</div><!--messages-line end-->
+										</div>
+										<!--messg-usr-img end-->
+									</div>
+									<!--main-message-box end-->
+								</div>
+								<!--messages-line end-->
 								<div class="message-send-area">
 									<form>
 										<div class="mf-field">
 											<input type="text" name="message" placeholder="Type a message here">
 											<button type="submit">Send</button>
 										</div>
-										<ul>
-											<li><a href="#" title=""><i class="fa fa-smile-o"></i></a></li>
-											<li><a href="#" title=""><i class="fa fa-camera"></i></a></li>
-											<li><a href="#" title=""><i class="fa fa-paperclip"></i></a></li>
-										</ul>
 									</form>
-								</div><!--message-send-area end-->
-							</div><!--main-conversation-box end-->
+								</div>
+								<!--message-send-area end-->
+							</div>
+							<!--main-conversation-box end-->
 						</div>
 					</div>
-				</div><!--messages-sec end-->
+					<div class="row" id="frontpage">
+						<div class="col-md-12">
+							<div class="card-deck">
+								<div class="card">
+									<div class="card-body">
+										<h3 class="card-title">abc</h3>
+										<a href="#" class="btn btn-primary" onclick="ask('abc')">Chat</a>
+									</div>
+								</div>
+								<div class="card">
+									<div class="card-body">
+										<h3 class="card-title">def</h3>
+										<a href="#" class="btn btn-primary" onclick="ask('def')">Chat</a>
+									</div>
+								</div>
+								<div class="card">
+									<div class="card-body">
+										<h3 class="card-title">zzz</h3>
+										<a href="#" class="btn btn-primary" onclick="ask('zzz')">Chat</a>
+									</div>
+								</div>
+								<div class="card">
+									<div class="card-body">
+										<h3 class="card-title">yyy</h3>
+										<a href="#" class="btn btn-primary" onclick="ask('yyy')">Chat</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<!--messages-sec end-->
 			</div>
-		</section><!--messages-page end-->
+		</section>
+		<!--messages-page end-->
 
 
 
@@ -277,19 +267,22 @@
 			</div>
 		</footer> -->
 
-	</div><!--theme-layout end-->
+	</div>
+	<!--theme-layout end-->
 
 
 
-<script type="text/javascript" src="js/jquery.min.js"></script>
-<script type="text/javascript" src="js/popper.js"></script>
-<script type="text/javascript" src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/jquery.mCustomScrollbar.js"></script>
-<script type="text/javascript" src="lib/slick/slick.min.js"></script>
-<script type="text/javascript" src="js/scrollbar.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+	<!-- <script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/popper.js"></script>
+	<script type="text/javascript" src="js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="js/jquery.mCustomScrollbar.js"></script>
+	<script type="text/javascript" src="lib/slick/slick.min.js"></script>
+	<script type="text/javascript" src="js/scrollbar.js"></script>
+	<script type="text/javascript" src="js/script.js"></script> -->
+	<script src="{{ url_for('static', filename='js/script.js')}}"></script>
 
 </body>
 
 <!-- Mirrored from gambolthemes.net/workwise_demo/HTML/messages.html by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 28 Apr 2019 14:19:48 GMT -->
+
 </html>
