--- a/app/templates/messages.html
+++ b/app/templates/messages.html
@@ -216,24 +216,36 @@
 								<div class="card">
 									<div class="card-body">
 										<h3 class="card-title">abc</h3>
+										<div class="usr-ms-img">
+											<img src="images/resources/m-img2.png" alt="">
+										</div>
 										<a href="#" class="btn btn-primary" onclick="ask('abc')">Chat</a>
 									</div>
 								</div>
 								<div class="card">
 									<div class="card-body">
 										<h3 class="card-title">def</h3>
+										<div class="usr-ms-img">
+											<img src="images/resources/m-img2.png" alt="">
+										</div>
 										<a href="#" class="btn btn-primary" onclick="ask('def')">Chat</a>
 									</div>
 								</div>
 								<div class="card">
 									<div class="card-body">
 										<h3 class="card-title">zzz</h3>
+										<div class="usr-ms-img">
+											<img src="images/resources/m-img2.png" alt="">
+										</div>
 										<a href="#" class="btn btn-primary" onclick="ask('zzz')">Chat</a>
 									</div>
 								</div>
 								<div class="card">
 									<div class="card-body">
 										<h3 class="card-title">yyy</h3>
+										<div class="usr-ms-img">
+											<img src="images/resources/m-img2.png" alt="">
+										</div>
 										<a href="#" class="btn btn-primary" onclick="ask('yyy')">Chat</a>
 									</div>
 								</div>
