--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -5372,3 +5372,39 @@ a:hover {
 .widget-feat ul li i.fa-eye {
 	color: #00b540;
 }
+.message{
+	display: flex;
+	height: 50px;
+}
+.message p{
+	font-size: 16x;
+	font-weight: bolder;
+	line-height: 26px;
+	border-radius: 10px;
+	max-width: 45%;
+	word-break: break-word;
+}
+.message-right{
+}
+
+.message-right p{
+	background-color: whitesmoke;
+	width: auto;
+	float: left;
+	min-width: 10%;
+	padding: 2px 10px;
+	margin: auto 0;
+	margin-right: 20px;
+	margin-left:auto;
+}
+.message-left{
+}
+.message-left p{
+	background-color: #51a6fbd8;
+	color:white;
+	width: auto;
+	float: left;
+	min-width: 10%;
+	padding: 2px 10px;
+	margin: auto 20px;
+}
