--- a/app/templates/messages.html
+++ b/app/templates/messages.html
@@ -81,136 +81,35 @@
 						</div>
 						<div class="col-lg-8 col-md-12 pd-right-none pd-left-none right">
 							<div class="main-conversation-box">
-								<div class="messages-line">
-									<div class="main-message-box">
-										<div class="messg-usr-img">
-											<img src="images/resources/m-img1.png" alt="">
-										</div>
-										<!--messg-usr-img end-->
-										<div class="message-dt">
-											<div class="message-inner-dt img-bx">
-												<img src="images/resources/mt-img1.png" alt="">
-												<img src="images/resources/mt-img2.png" alt="">
-												<img src="images/resources/mt-img3.png" alt="">
-											</div>
-											<!--message-inner-dt end-->
-											<span>Sat, Aug 23, 1:08 PM</span>
-										</div>
-										<!--message-dt end-->
+								<div class="messages-line" id="chat">
+									<div class="message-right message">
+										<p>
+											abcddef
+										</p>
 									</div>
-									<!--main-message-box end-->
-									<div class="main-message-box ta-right">
-										<div class="message-dt">
-											<div class="message-inner-dt">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum
-													congue leo eget malesuada. Vivamus suscipit tortor eget felis
-													porttitor.</p>
-											</div>
-											<!--message-inner-dt end-->
-											<span>Sat, Aug 23, 1:08 PM</span>
-										</div>
-										<!--message-dt end-->
-										<div class="messg-usr-img">
-											<img src="images/resources/m-img2.png" alt="">
-										</div>
-										<!--messg-usr-img end-->
+									<div class="message-left message">
+										<p>
+											abcddef
+										</p>
 									</div>
-									<!--main-message-box end-->
-									<div class="main-message-box st3">
-										<div class="message-dt st3">
-											<div class="message-inner-dt">
-												<p>Cras ultricies ligula.<img src="images/smley.png" alt=""></p>
-											</div>
-											<!--message-inner-dt end-->
-											<span>5 minutes ago</span>
-										</div>
-										<!--message-dt end-->
-										<div class="messg-usr-img">
-											<img src="images/resources/m-img1.png" alt="">
-										</div>
-										<!--messg-usr-img end-->
-									</div>
-									<!--main-message-box end-->
-									<div class="main-message-box ta-right">
-										<div class="message-dt">
-											<div class="message-inner-dt">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum
-													congue leo eget malesuada. Vivamus suscipit tortor eget felis
-													porttitor.</p>
-											</div>
-											<!--message-inner-dt end-->
-											<span>Sat, Aug 23, 1:08 PM</span>
-										</div>
-										<!--message-dt end-->
-										<div class="messg-usr-img">
-											<img src="images/resources/m-img2.png" alt="">
-										</div>
-										<!--messg-usr-img end-->
-									</div>
-									<!--main-message-box end-->
-									<div class="main-message-box st3">
-										<div class="message-dt st3">
-											<div class="message-inner-dt">
-												<p>....</p>
-											</div>
-											<!--message-inner-dt end-->
-											<span>Typing...</span>
-										</div>
-										<!--message-dt end-->
-										<div class="messg-usr-img">
-											<img src="images/resources/m-img1.png" alt="">
-										</div>
-										<!--messg-usr-img end-->
-									</div>
-									<!--main-message-box end-->
-									<div class="main-message-box ta-right">
-										<div class="message-dt">
-											<div class="message-inner-dt">
-												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rutrum
-													congue leo eget malesuada. Vivamus suscipit tortor eget felis
-													porttitor.</p>
-											</div>
-											<!--message-inner-dt end-->
-											<span>Sat, Aug 23, 1:08 PM</span>
-										</div>
-										<!--message-dt end-->
-										<div class="messg-usr-img">
-											<img src="images/resources/m-img2.png" alt="">
-										</div>
-										<!--messg-usr-img end-->
-									</div>
-									<!--main-message-box end-->
-									<div class="main-message-box st3">
-										<div class="message-dt st3">
-											<div class="message-inner-dt">
-												<p>....</p>
-											</div>
-											<!--message-inner-dt end-->
-											<span>Typing...</span>
-										</div>
-										<!--message-dt end-->
-										<div class="messg-usr-img">
-											<img src="images/resources/m-img1.png" alt="">
-										</div>
-										<!--messg-usr-img end-->
-									</div>
-									<!--main-message-box end-->
+
 								</div>
 								<!--messages-line end-->
 								<div class="message-send-area">
-									<form>
-										<div class="mf-field">
-											<input type="text" name="message" placeholder="Type a message here">
-											<button type="submit">Send</button>
-										</div>
-									</form>
+									<div class="mf-field">
+										<input type="text" name="message" placeholder="Type a message here" id="message"
+											onkeypress="enterEV()">
+										<button id="send">Send</button>
+									</div>
 								</div>
 								<!--message-send-area end-->
 							</div>
 							<!--main-conversation-box end-->
 						</div>
 					</div>
-					<div class="row" id="frontpage">
+					<div class=" row" id="frontpage">
+						<p>Myname:</p> <input id="myname" type="text" placeholder="myname" />
+						<button id="request" onclick="saveName()"> save</button>
 						<div class="col-md-12">
 							<div class="card-deck">
 								<div class="card">
@@ -219,7 +118,7 @@
 										<div class="usr-ms-img">
 											<img src="images/resources/m-img2.png" alt="">
 										</div>
-										<a href="#" class="btn btn-primary" onclick="ask('abc')">Chat</a>
+										<a href="#" class="btn btn-primary" onclick="ask('myna0')">Chat</a>
 									</div>
 								</div>
 								<div class="card">
@@ -228,7 +127,7 @@
 										<div class="usr-ms-img">
 											<img src="images/resources/m-img2.png" alt="">
 										</div>
-										<a href="#" class="btn btn-primary" onclick="ask('def')">Chat</a>
+										<a href="#" class="btn btn-primary" onclick="ask('myna1')">Chat</a>
 									</div>
 								</div>
 								<div class="card">
@@ -237,7 +136,7 @@
 										<div class="usr-ms-img">
 											<img src="images/resources/m-img2.png" alt="">
 										</div>
-										<a href="#" class="btn btn-primary" onclick="ask('zzz')">Chat</a>
+										<a href="#" class="btn btn-primary" onclick="ask('myna2')">Chat</a>
 									</div>
 								</div>
 								<div class="card">
@@ -246,7 +145,7 @@
 										<div class="usr-ms-img">
 											<img src="images/resources/m-img2.png" alt="">
 										</div>
-										<a href="#" class="btn btn-primary" onclick="ask('yyy')">Chat</a>
+										<a href="#" class="btn btn-primary" onclick="ask('myna3')">Chat</a>
 									</div>
 								</div>
 							</div>
