add multiple chat

--- a/app/templates/index2.html
+++ b/app/templates/index2.html
@@ -11,8 +11,8 @@
     <h2 style="text-align: center">Chat</h2>
     <div id="chat">
         <div id="me">
-            <p id="myID">User ID:</p>
-            <p id="userName"></p>
+            <p>my ID:</p> <input id="myname" type="text" placeholder="Friend Id" />
+            <button id="save" onclick="saveName()"> save</button>
         </div>
         <button hidden id="login">Login</button>
         <div id="friend">
@@ -23,6 +23,7 @@
         </div>
         <div class="send">
             <input id="message" type="text" placeholder="Message" onkeypress="return enterEV(event)" />
+            <input type="file" id="sendFile" />
             <button id="send">Send</button>
         </div>
     </div>
@@ -30,7 +31,7 @@
 
 </body>
 
-<script src="{{ url_for('static', filename='js/script.js')}}"></script>
+<!-- <script src="{{ url_for('static', filename='js/script.js')}}"></script> -->
 <script src="{{ url_for('static', filename='js/chat.js')}}"></script>
 
 </html>
