--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4722,6 +4722,10 @@ a:hover {
 	top: 5px;
 	padding-left: 5px;
 }
+.usr-mg-info img{
+	width: 50px;
+	border-radius: 100px;
+}
 .posted_time {
 	position: absolute;
 	top: 2px;
