--- a/app/templates/messages.html
+++ b/app/templates/messages.html
@@ -48,28 +48,12 @@
 								</div>
 								<!--msg-title end-->
 								<div class="messages-list">
-									<ul>
+									<ul id="list-user">
 										<li class="active">
 											<div class="usr-msg-details">
-												<div class="usr-ms-img">
-													<img src="images/resources/m-img1.png" alt="">
-													<span class="msg-status"></span>
-												</div>
 												<div class="usr-mg-info">
-													<h3>John</h3>
+													<h3></h3>
 												</div>
-											</div>
-											<!--usr-msg-details end-->
-										</li>
-										<li>
-											<div class="usr-msg-details">
-												<div class="usr-ms-img">
-													<img src="images/resources/m-img2.png" alt="">
-												</div>
-												<div class="usr-mg-info">
-													<h3>David Vane</h3>
-												</div>
-												<!--usr-mg-info end-->
 											</div>
 											<!--usr-msg-details end-->
 										</li>
@@ -80,20 +64,8 @@
 							<!--msgs-list end-->
 						</div>
 						<div class="col-lg-8 col-md-12 pd-right-none pd-left-none right">
-							<div class="main-conversation-box">
-								<div class="messages-line" id="chat">
-									<div class="message-right message">
-										<p>
-											abcddef
-										</p>
-									</div>
-									<div class="message-left message">
-										<p>
-											abcddef
-										</p>
-									</div>
+							<div class="main-conversation-box" id="chat">
 
-								</div>
 								<!--messages-line end-->
 								<div class="message-send-area">
 									<div class="mf-field">
@@ -115,36 +87,24 @@
 								<div class="card">
 									<div class="card-body">
 										<h3 class="card-title">abc</h3>
-										<div class="usr-ms-img">
-											<img src="images/resources/m-img2.png" alt="">
-										</div>
 										<a href="#" class="btn btn-primary" onclick="ask('myna0')">Chat</a>
 									</div>
 								</div>
 								<div class="card">
 									<div class="card-body">
 										<h3 class="card-title">def</h3>
-										<div class="usr-ms-img">
-											<img src="images/resources/m-img2.png" alt="">
-										</div>
 										<a href="#" class="btn btn-primary" onclick="ask('myna1')">Chat</a>
 									</div>
 								</div>
 								<div class="card">
 									<div class="card-body">
 										<h3 class="card-title">zzz</h3>
-										<div class="usr-ms-img">
-											<img src="images/resources/m-img2.png" alt="">
-										</div>
 										<a href="#" class="btn btn-primary" onclick="ask('myna2')">Chat</a>
 									</div>
 								</div>
 								<div class="card">
 									<div class="card-body">
 										<h3 class="card-title">yyy</h3>
-										<div class="usr-ms-img">
-											<img src="images/resources/m-img2.png" alt="">
-										</div>
 										<a href="#" class="btn btn-primary" onclick="ask('myna3')">Chat</a>
 									</div>
 								</div>
