add multiple chat

--- a/app/templates/messages.html
+++ b/app/templates/messages.html
@@ -49,14 +49,6 @@
 								<!--msg-title end-->
 								<div class="messages-list">
 									<ul id="list-user">
-										<li class="active">
-											<div class="usr-msg-details">
-												<div class="usr-mg-info">
-													<h3></h3>
-												</div>
-											</div>
-											<!--usr-msg-details end-->
-										</li>
 									</ul>
 								</div>
 								<!--messages-list end-->
@@ -143,8 +135,8 @@
 
 
 
-	<!-- <script type="text/javascript" src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/popper.js"></script>
+	<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js')}}"></script>
+	<!--<script type="text/javascript" src="js/popper.js"></script>
 	<script type="text/javascript" src="js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/jquery.mCustomScrollbar.js"></script>
 	<script type="text/javascript" src="lib/slick/slick.min.js"></script>
