--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4621,10 +4621,14 @@ a:hover {
 	border-right: 1px solid #e4e4e4;
 }
 .msg-title {
+	display: flex;
+    justify-content: space-between;
+    align-items: center;
 	float: left;
 	width: 100%;
-	padding: 36px 20px;
-	height:10%;
+	margin: 0px;
+	padding: 10px 10px;
+	border-bottom: 2px solid darkgray;
 }
 .msg-title > h3 {
 	color: #000000;
@@ -4666,7 +4670,8 @@ a:hover {
 	cursor: pointer;
 }
 .messages-list ul li.active {
-	background-color: #efefef;
+	background-color:  lightsteelblue;
+	color: #f7f7f7!important;
 }
 .usr-msg-details {
 	float: left;
@@ -4726,7 +4731,6 @@ a:hover {
 	padding-left: 13px;
 }
 .usr-mg-info h3 {
-	color: #000000;
 	font-size: 18px;
 	font-weight: 600;
 }
@@ -4899,6 +4903,7 @@ a:hover {
 	width: 100%;
 }
 .mf-field {
+	display: flex;
 	float: left;
 	width: 100%;
 }
@@ -4909,13 +4914,12 @@ a:hover {
 	color: #b2b2b2;
 	font-size: 16px;
 	padding: 0 15px;
-	border: 1px solid #e6e6e6;
+	border: 1px solid darkgray;
 	height: 45px;
 }
 .mf-field button {
 	float: left;
 	width: 17%;
-	background-color: #e44d3a;
 	height: 45px;
 	text-align: center;
 	color: #fff;
@@ -5407,4 +5411,136 @@ a:hover {
 	min-width: 10%;
 	padding: 2px 10px;
 	margin: auto 20px;
+}
+.upload-btn-wrapper {
+	display: flex;
+	justify-content: center;
+	width: 20%;
+	position: relative;
+	overflow: hidden;
+  }
+  
+.upload-btn-wrapper input[type=file] {
+	font-size: 100px;
+	position: absolute;
+	left: 0;
+	top: 0;
+	opacity: 0;
+  }
+  .input-field{
+	  display: flex;
+	  width: 80%;
+  }
+  .input-field button{
+  	width: 70%;
+    border-radius: 89px;
+	margin: 0 10px;
+	font-size: 12px;
+	background-color: darkgray;
+	color: white;
+}	
+  .input-field  input[type=text] {
+	width: 80%;
+	color:black;
+}
+  .input-field  input[type=file] {
+	width: 100%;
+}
+#btn-upload{
+	word-wrap: anywhere;
+}
+.user-li{
+	display:flex;
+	align-items: center;
+}
+.noti{
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+}
+.noti-message{
+	font-size:20px;
+}
+body {
+    font-family: sans-serif
+}
+.dialog-ovelay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.50);
+    z-index: 999999
+}
+.dialog-ovelay .dialog {
+    width: 400px;
+    margin: 100px auto 0;
+    background-color: #fff;
+    box-shadow: 0 0 20px rgba(0,0,0,.2);
+    border-radius: 3px;
+    overflow: hidden
+}
+.dialog-ovelay .dialog header {
+    padding: 10px 8px;
+    background-color: #f6f7f9;
+    border-bottom: 1px solid #e5e5e5
+}
+.dialog-ovelay .dialog header h3 {
+    font-size: 14px;
+    margin: 0;
+    color: #555;
+    display: inline-block
+}
+.dialog-ovelay .dialog header .fa-close {
+    float: right;
+    color: #c4c5c7;
+    cursor: pointer;
+    transition: all .5s ease;
+    padding: 0 2px;
+    border-radius: 1px    
+}
+.dialog-ovelay .dialog header .fa-close:hover {
+    color: #b9b9b9
+}
+.dialog-ovelay .dialog header .fa-close:active {
+    box-shadow: 0 0 5px #673AB7;
+    color: #a2a2a2
+}
+.dialog-ovelay .dialog .dialog-msg {
+    padding: 12px 10px
+}
+.dialog-ovelay .dialog .dialog-msg p{
+    margin: 0;
+    font-size: 15px;
+    color: #333
+}
+.dialog-ovelay .dialog footer {
+    border-top: 1px solid #e5e5e5;
+    padding: 8px 10px
+}
+.dialog-ovelay .dialog footer .controls {
+    direction: rtl
+}
+.dialog-ovelay .dialog footer .controls .button {
+    padding: 5px 15px;
+    border-radius: 3px
+}
+.button {
+  cursor: pointer
+}
+.button-default {
+    background-color: rgb(248, 248, 248);
+    border: 1px solid rgba(204, 204, 204, 0.5);
+    color: #5D5D5D;
+}
+.button-danger {
+    background-color: #f44336;
+    border: 1px solid #d32f2f;
+    color: #f5f5f5
+}
+.link {
+  padding: 5px 10px;
+  cursor: pointer
 }
