--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -4738,6 +4738,9 @@ a:hover {
 	border-radius: 100px;
 }
 .usr-mg-info {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	float: left;
 	padding-left: 13px;
 }
@@ -5421,7 +5424,7 @@ a:hover {
 .message-left{
 }
 .message-left p{
-	background-color: whitesmoke;
+	background-color: lightgray;
 	width: auto;
 	float: left;
 	min-width: 10%;
@@ -5600,3 +5603,11 @@ body {
 	height: 120px;
 	text-align: center;
 }
+#list-user .btn.btn-outline-danger{
+	width: 120px;
+}
+@media screen and (max-width: 800px) {
+	.messages-page .left {
+	 height: auto;
+	}
+  }
