--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,178 +1,203 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MMT</title>
-    <link rel="stylesheet" href="">
-    <link rel="icon" href="banner.png" >
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-</head>
-<body>
-    <div class="container">
-        <div class="header">
-            <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-                    <ul class="navbar-nav">
-                            <li class="nav-item">
-                              <a class="nav-link" href="signinPage">Sign in</a>
-                            </li>
-                          </ul>
-            </nav>
-        </div>
-
-        <div class="jumbotron">
-            <h1>CHAT MMT</h1>
-            <form action="/signup" class="form-signup" method="POST">
-                <input type="text" name="name" id="name" class="form-control" placeholder="Username" >
-                <input type="password" name="password" id="password" class="form-control" placeholder="Password">
-                <input type="password" name="confirm-pwd" id="confirm-pwd" class="form-control" placeholder="Confirm password">
-                <button id="btnSignUp" type="submit" class="btn btn-lg btn-primary btn-block">Sign up</button>
-            </form>
-        </div>
-    </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</body>
-</html> -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://fonts.googleapis.com/css?family=Roboto|Courgette|Pacifico:400,700" rel="stylesheet">
-<title>CHAT MMT</title>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
-<style type="text/css">
-	body{
-		color: #999;
-		background: #e2e2e2;
-        font-family: 'Roboto', sans-serif;
-        background-image: url("https://images.pexels.com/photos/743986/pexels-photo-743986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
-	}
-	.form-control{
-		min-height: 41px;
-		box-shadow: none;
-		border-color: #e1e1e1;
-	}
-	.form-control:focus{
-		border-color: #00cb82;
-	}	
-    .form-control, .btn{        
-        border-radius: 3px;
-    }
-	.form-header{
-		margin: -30px -30px 20px;
-		padding: 30px 30px 10px;
-		text-align: center;
-		background: #00cb82;
-		border-bottom: 1px solid #eee;
-		color: #fff;
-	}
-	.form-header h2{
-		font-size: 34px;
-		font-weight: bold;
-        margin: 0 0 10px;
-		font-family: 'Pacifico', sans-serif;
-    }
-	.form-header p{
-		margin: 20px 0 15px;
-		font-size: 17px;
-		line-height: normal;
-		font-family: 'Courgette', sans-serif;
-	}
-    .signup-form{
-		width: 390px;
-		margin: 0 auto;	
-		padding: 30px 0;	
-	}
-    .signup-form form{
-		color: #999;
-		border-radius: 3px;
-    	margin-bottom: 15px;
-        background: #f0f0f0;
-        box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
-        padding: 30px;
-    }
-	.signup-form .form-group{
-		margin-bottom: 20px;
-	}		
-	.signup-form label{
-		font-weight: normal;
-		font-size: 13px;
-	}
-    .signup-form input[type="checkbox"]{
-		margin-top: 2px;
-	}
-    .signup-form .btn{        
-        font-size: 16px;
-        font-weight: bold;
-		background: #00cb82;
-		border: none;
-		min-width: 200px;
-    }
-	.signup-form .btn:hover, .signup-form .btn:focus{
-		background: #00b073 !important;
-        outline: none;
-	}
-    .signup-form a{
-		color: #00cb82;		
-	}
-    .signup-form a:hover{
-		text-decoration: underline;
-	}
-</style>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Courgette|Pacifico:400,700" rel="stylesheet">
+	<title>CHAT MMT</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<style type="text/css">
+		body {
+			color: #999;
+			background: #e2e2e2;
+			font-family: 'Roboto', sans-serif;
+			background-image: url("https://images.pexels.com/photos/743986/pexels-photo-743986.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");
+		}
+
+		.form-control {
+			min-height: 41px;
+			box-shadow: none;
+			border-color: #e1e1e1;
+		}
+
+		.form-control:focus {
+			border-color: #00cb82;
+		}
+
+		.form-control,
+		.btn {
+			border-radius: 3px;
+		}
+
+		.form-header {
+			margin: -30px -30px 20px;
+			padding: 30px 30px 10px;
+			text-align: center;
+			background: #00cb82;
+			border-bottom: 1px solid #eee;
+			color: #fff;
+		}
+
+		.form-header h2 {
+			font-size: 34px;
+			font-weight: bold;
+			margin: 0 0 10px;
+			font-family: 'Pacifico', sans-serif;
+		}
+
+		.form-header p {
+			margin: 20px 0 15px;
+			font-size: 17px;
+			line-height: normal;
+			font-family: 'Courgette', sans-serif;
+		}
+
+		.signup-form {
+			width: 390px;
+			margin: 0 auto;
+			padding: 30px 0;
+		}
+
+		.signup-form form {
+			color: #999;
+			border-radius: 3px;
+			margin-bottom: 15px;
+			background: #f0f0f0;
+			box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+			padding: 30px;
+		}
+
+		.signup-form .form-group {
+			margin-bottom: 20px;
+		}
+
+		.signup-form label {
+			font-weight: normal;
+			font-size: 13px;
+		}
+
+		.signup-form input[type="checkbox"] {
+			margin-top: 2px;
+		}
+
+		.signup-form .btn {
+			font-size: 16px;
+			font-weight: bold;
+			background: #00cb82;
+			border: none;
+			min-width: 200px;
+		}
+
+		.signup-form .btn:hover,
+		.signup-form .btn:focus {
+			background: #00b073 !important;
+			outline: none;
+		}
+
+		.signup-form a {
+			color: #00cb82;
+		}
+
+		.signup-form a:hover {
+			text-decoration: underline;
+		}
+
+		#name1-form,#password-form,#confirm-password-form {
+			display: flex;
+			justify-content: space-between;
+		}
+
+		.greenicon {
+			color: green;
+		}
+
+		.redicon {
+			color: red;
+		}
+	</style>
 </head>
+
 <body>
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-          <script>
-            var messages = {{ messages | safe }};
-            for (var i=0; i<messages.length; i++) {
-              alert(messages[i]);
-            }
-          </script>
-        {% endif %}
-      {% endwith %}
-<div class="signup-form">
-    <form action="/signup" method="post">
-		<div class="form-header">
-			<h2>Sign Up</h2>
-			<p>Welcome to our chat chit kho vcl</p>
-		</div>
-        <div class="form-group">
-			<label>Username</label>
-        	<input type="text" class="form-control" name="name" id="name" required="required">
-        </div>
-		<div class="form-group">
-			<label>Password</label>
-            <input type="password" class="form-control" name="password" id="password" pattern=".{6,}" title="Mật khẩu của bạn không được dưới 6 kí tự " required="required">
-        </div>
-		<div class="form-group">
-			<label>Confirm Password</label>
-            <input type="password" class="form-control" name="confirm_password" id="confirm_password" required="required">
-        </div>        
-		<div class="form-group">
-			<button type="submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
-		</div>	
-    </form>
-	<div class="text-center small">Already have an account? <a href="signinPage">Login here</a></div>
-</div>
-<script>
-	$(document).ready(function(){
-		$('#name').keyup(function(){
-			$.ajax({
-				dataType:'text',
-				url:"/checkname?name="+$('#name').val(),
-				
+	<div class="signup-form">
+		<form action="/signup" method="post">
+			<div class="form-header">
+				<h2>Sign Up</h2>
+				<p>Welcome to our chat chit kho vcl</p>
+			</div>
+			<div class="form-group">
+				<label>Username</label>
+				<div id="name1-form">
+					<input type="text" class="form-control" name="name" id="name" required="required">
+				</div>
+			</div>
+			<div class="form-group">
+				<label>Password</label>
+					<input type="password" class="form-control" name="password" id="password" pattern=".{6,}"
+						title="Mật khẩu của bạn không được dưới 6 kí tự " required="required">
+			</div>
+			<div class="form-group">
+				<label>Confirm Password</label>
+				<div id="confirm-password-form">
+				<input type="password" class="form-control" name="confirm_password" id="confirm-password"
+					required="required">
+				</div>
+			</div>
+			<div class="form-group">
+				<button type="submit" id="submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
+			</div>
+		</form>
+		<div class="text-center small">Already have an account? <a href="signinPage">Login here</a></div>
+	</div>
+	<script>
+		$(document).ready(function () {
+			$('#name').keyup(function () {
+				var html = "";
+				$.ajax({
+					dataType: 'text',
+					url: "/checkname?name=" + $('#name').val(),
+					success: function (data) {
+						console.log(data)
+						if (data == 'False') {
+							$('#name1-form i').remove();
+							html = "<i class=\"far fa-check-circle fa-2x greenicon\"></i>"
+							$('#name1-form').append(html);
+							document.getElementById('submit').disabled=false;
+						}
+						else {
+							$('#name1-form i').remove();
+							html = "<i class=\"fas fa-ban fa-2x redicon\"></i>"
+							$('#name1-form').append(html);
+							document.getElementById('submit').disabled=true
+						}
+					}
+				});
+			})
+			$('#confirm-password,#password').keyup(function(){
+				var password=$('#password').val();
+				var confirm_password=$('#confirm-password').val();
+				var html="";
+				if (confirm_password!=""){
+				if (password!=confirm_password){
+							$('#confirm-password-form i').remove();
+							html = "<i class=\"fas fa-ban fa-2x redicon\"></i>"
+							$('#confirm-password-form').append(html);
+							document.getElementById('submit').disabled=true;
+				}
+				else{
+					$('#confirm-password-form i').remove();
+					html = "<i class=\"far fa-check-circle fa-2x greenicon\"></i>"
+					$('#confirm-password-form').append(html);
+					document.getElementById('submit').disabled=false;
+				}
+			}
 			});
-		})
-	});
-</script>
+		});
+	</script>
 </body>
-</html>                            
+
+</html>
